--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
       content="Web site created using create-react-app"
     />
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="./styles/globalOutput.css">
     <title>Les Cris de Lyon</title>
   </head>
   <body>
